OpenLDAP 2.3 Change Log

OpenLDAP 2.3.22 Engineering
	Fixed slapd-ldap fd cleanup (ITS#4474)
	Fixed slapo-syncprov MODs cause DELs (ITS#4423)
	Fixed slapd slap_send_ldap_result bug (ITS#4499)
	Fixed slapd-ldif deadlock (ITS#4500)
	Fixed liblutil strtoul(3) usage (ITS#4503)
	Updated ldapsearch(1) BASE output (ITS#4504)
	Fixed slapd cn=config (ITS#4512)
	Fixed slapd thread pool init issue (ITS#4513)
	Fixed slapd cn=config olcLimits (ITS#4515)
	Fixed slapd cn=config ACL application fix
	Fixed slapd runqueue use of freed memory (ITS#4517)
	Added slapd syncrepl mandatory searchbase check
	Fixed slapo-accesslog bugs
	Added slapo-accesslog oldReq feature
	Fixed slapo ppolicy BER tags (ITS#4528)
	Fixed slapo-auditlog missing return codes
	Fixed slurpd potential overflow issue
	Fixed slapo-translucent modifications (ITS#4527)
	Fixed libldap_r thread debug missing break
	Fixed libldap_r tpool cleanup
	Fixed liblutil time resolution issue

OpenLDAP 2.3.21 Release
	Fixed libldap referral chasing issue (ITS#4448)
	Fixed libldap invalid free bug (ITS#4436)
	Fixed libldap mutex leak (ITS#4441)
	Fixed libldap_r thr_yield(2) return handling (ITS#4469)
	Fixed slapd syncprov/glue interaction issue (ITS#4323, ITS#4417)
	Fixed slapd operational attrs in presence of global overlays (ITS#4431)
	Fixed slapd "threads" config value checking (ITS#4433)
	Fixed slapd connection index bound check (ITS#4449)
	Fixed slapd connection cleanup (ITS#4465)
	Fixed slapd slap_realloc misuse (ITS#4477)
	Fixed slapd size limit check when pagesize=1 (ITS#4479)
	Fixed slapd-bdb/hdb cache issue (ITS#4439)
	Fixed slapd-ldbm crash on modify bug (ITS#4464)
	Fixed slapd-ldap potential bind deadlock (ITS#4409)
	Fixed slapd-ldap/meta conn expiration concurrency (ITS#4429)
	Fixed slapd-ldap failed bind connection trashing (ITS#4428)
	Fixed slapd-ldap/meta chase-referrals disabling (ITS#4447)
	Fixed slapd-ldap controls forwarding (ITS#4457)
	Fixed slapd-ldap pretty DN in proxied requests (ITS#4456)